# sapientcot

./: CHANGELOG.md  README.md  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: ci.yml
debian/: sapientcot.conf  sapientcot.postinst  sapientcot.service
sapientcot/: __init__.py  classes.py  commands.py  constants.py  functions.py
tests/: test_sapientcot.py
