# Setup configuration for SAPIENTCOT: SAPIENT (BSI Flex 335) to TAK Gateway
# Copyright Sensors & Signals LLC https://www.snstac.com
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = sapientcot
version = attr: sapientcot.__version__
url = https://github.com/snstac/sapientcot
project_urls =
  CI: GitHub Actions = https://github.com/snstac/sapientcot/actions
  GitHub: issues = https://github.com/snstac/sapientcot/issues
  GitHub: repo = https://github.com/snstac/sapientcot
description = SAPIENT (BSI Flex 335) C-UAS to TAK Gateway.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Sensors & Signals LLC <oss@snstac.com>
license = Apache 2.0
license_files = LICENSE
classifiers =
  License :: OSI Approved :: Apache Software License
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only

[options]
packages = sapientcot
package_dir =
  sapientcot = sapientcot
python_requires = >=3.8, <4
install_requires =
  pytak >= 7.3.0
  sapient-msg
  protobuf

[options.entry_points]
console_scripts =
    sapientcot = sapientcot.commands:main
